--- a/templates/setting_configbutton.mustache
+++ b/templates/setting_configbutton.mustache
@@ -20,21 +20,15 @@
     Admin text setting template.
 
     Context variables required for this template:
-    * name - form element name
-    * id - element id
-    * value - element value
-    * size - element size
+    * label - form element name
+    * href - element id
     * forceltr - always display as ltr
-    * attributes - list of additional attributes containing name, value
 
     Example context (json):
     {
-        "name": "test",
-        "id": "test0",
-        "value": "A tall, dark stranger will have more fun than you.",
-        "size": "21",
-        "forceltr": false,
-        "attributes": [ { "name": "readonly", "value": "readonly" } ]
+        "label": "button label",
+        "href": "http://google.com",
+        "forceltr": false
     }
 }}
 <div class="form-text defaultsnext">
