--- a/.extlib/simplesamlphp/templates/post.twig
+++ b/.extlib/simplesamlphp/templates/post.twig
@@ -7,8 +7,8 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
     <link rel="icon" href="{{ asset("icons/favicon.ico") }}">
     <title>{% trans %}Sending message{% endtrans %}</title>
-    <link rel="stylesheet" href="{{ asset("css/postSubmit.css") }}">
-    <script src="{{ asset("js/post.js") }}"></script>
+    <link rel="stylesheet" href="/{{ baseurlpath }}resources/post.css">
+    <script src="/{{ baseurlpath }}resources/post.js"></script>
   </head>
   <body>
     <form method="post" action="{{ destination }}">
